Bug 1148518 - Fix ensure preview dialog always covers screen

--- a/public/style/bzlite.css
+++ b/public/style/bzlite.css
@@ -413,7 +413,7 @@ em {
 }
 
 .preview {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
